# rational

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/rational/: rational.h
lib/: CMakeLists.txt  rational.cpp
test/: CMakeLists.txt  TestRational.cpp
